do changes like added overflow: hidden to main tag in starter.css and removed the overflow: hidden to about-style.css which causes issues in medium and smaller screens.

--- a/CSS/PROJECTS/01_CodingWallah_Frontend_Website_Clone/CSS/about-style.css
+++ b/CSS/PROJECTS/01_CodingWallah_Frontend_Website_Clone/CSS/about-style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Jersey+15&display=swap');
 
+main{
+    overflow: visible;
+}
+
 .texto{
     width: 100%;
     height: 100vh;
